examples/test/testpolicy17570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17570
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key31: value15
      key14: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value8
          key38: value2
          key28: value11
      podSelector:
        matchLabels:
          key38: value26
          key23: value44
          key16: value27
